# MyNpmLensGnome

./: .gitignore  README.md  ROADMAP.md  io.github.eljijuna.NpmLens.json  make-release.sh  meson.build
data/: io.github.eljijuna.NpmLens.desktop  io.github.eljijuna.NpmLens.gresource.xml  io.github.eljijuna.NpmLens.metainfo.xml  meson.build
src/: main.c  meson.build  window.c
